--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Grabs current song info from Spotify window and gets Genius lyrics",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "author": "Shane Steszyn",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^0.22.0",
+    "electron": "^1.4.4",
     "fs": "0.0.1-security",
     "jquery": "^3.1.1",
     "jsdom": "^9.8.0",
