--- a/package.json
+++ b/package.json
@@ -9,10 +9,41 @@
   "author": "Shane Steszyn",
   "license": "ISC",
   "dependencies": {
+    "better-console": "^0.2.4",
     "cheerio": "^0.22.0",
+    "del": "^2.2.2",
     "electron": "^1.4.4",
+    "extend": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-chmod": "^1.3.0",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-clone": "^1.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-copy": "0.0.2",
+    "gulp-dedupe": "0.0.2",
+    "gulp-flatten": "^0.3.1",
+    "gulp-header": "^1.8.8",
+    "gulp-help": "^1.6.1",
+    "gulp-if": "^2.0.1",
+    "gulp-less": "^3.1.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rtlcss": "^1.0.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.10",
+    "map-stream": "0.0.6",
     "node-genius": "^1.1.0",
     "node-spotify-webhelper": "0.0.5",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "require-dot-file": "^0.4.0",
+    "run-sequence": "^1.2.2",
+    "semantic-ui": "^2.2.4",
+    "yamljs": "^0.2.8"
   }
 }
